Move away of deprecated Thread.getId