@@ -212,7 +212,7 @@ public class TestUtil {
 			sb.append(job.getClass().getName());
 			Thread thread = job.getThread();
 			if (thread != null) {
-				ThreadInfo[] threadInfos = ManagementFactory.getThreadMXBean().getThreadInfo(new long[] { thread.getId() }, true, true);
+				ThreadInfo[] threadInfos = ManagementFactory.getThreadMXBean().getThreadInfo(new long[] { thread.threadId() }, true, true);
 				if (threadInfos[0] != null) {
 					sb.append("\nthread info: ").append(threadInfos[0]);
 				}
@@ -221,7 +221,7 @@ public class TestUtil {
 		}
 
 		Thread thread = Display.getDefault().getThread();
-		ThreadInfo[] threadInfos = ManagementFactory.getThreadMXBean().getThreadInfo(new long[] { thread.getId() }, true, true);
+		ThreadInfo[] threadInfos = ManagementFactory.getThreadMXBean().getThreadInfo(new long[] { thread.threadId() }, true, true);
 		if (threadInfos[0] != null) {
 			sb.append("\n").append("UI thread info: ").append(threadInfos[0]);
 		}
